force-app/main/default/objects/smagicinteract__Converse_App_Action__c/smagicinteract__Converse_App_Action__c.object-meta.xml
<CustomObject>
    <description>As Converse App is container of SMS activities like Bulk SMS, Automated SMS, We need a sub object which will be used to store the Activity instruction level details. E.g. Bulk for sub purpose A, B,C or An automation configurations for  each of workflow rule.</description>
    <label>Converse App Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse App Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>