force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Automation_Key__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Automation_Key__c</fullName>
    <description>This field contains the automation key used in the Process builder/workflows.</description>
    <displayFormat>PA-{000000}</displayFormat>
    <label>Automation Key</label>
    <type>AutoNumber</type>
</CustomField>