force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>