force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <description>Lookup to Converse App object.</description>
    <label>Converse App</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3)</booleanFilter>
        <filterItems>
            <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filterItems>
        <filterItems>
            <field>smagicinteract__Converse_App__c.smagicinteract__Status__c</field>
            <operation>equals</operation>
            <value>Paused</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>smagicinteract__Converse_App__c</referenceTo>
    <relationshipLabel>Converse App Action</relationshipLabel>
    <relationshipName>Converse_App_Action</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>