force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__End_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__End_Date__c</fullName>
    <description>This field contains the end date of an Action.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>