force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Fallback_SenderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Fallback_SenderId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Fallback sender id would be used if a sender id corresponding to criteria can&apos;t be found. Not specifying this field would fail messages for records where sender selection criteria didn&apos;t return a valid sender id</description>
    <label>Fallback SenderId</label>
    <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
    <relationshipLabel>Converse App Action</relationshipLabel>
    <relationshipName>Converse_App_Action</relationshipName>
    <type>Lookup</type>
</CustomField>