force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__List_View_ID__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__List_View_ID__c</fullName>
    <description>This field contains the ID of the list view.</description>
    <label>List View ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>