force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Message_App_Trigger__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_App_Trigger__c</fullName>
    <description>This field contains the type of the trigger. The type can be: Process Builder, Workflow, Manual, Detail, Pardot. etc.</description>
    <label>Message App Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Manual-Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>