force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Message_App_Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_App_Trigger_Name__c</fullName>
    <description>This field contains the name of the message app trigger.</description>
    <label>Message App Trigger Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>