force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Message_Sequence__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_Sequence__c</fullName>
    <description>This field contains the message sequence.</description>
    <label>Message Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>