force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Message_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_Text__c</fullName>
    <description>This field contains the message text used for sending SMS.</description>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>