force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Mobile_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Mobile_Phone_Field__c</fullName>
    <description>This field contains the mobile phone field used for sending SMS.</description>
    <label>Mobile Phone Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>