force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Purpose__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Purpose__c</fullName>
    <description>This field contains the purpose of the Action.</description>
    <label>Purpose</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>