force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Respect_Subscription_Setting__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Respect_Subscription_Setting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, people who have opted out won&apos;t get messages and people who&apos;ve opted in would get messages.</description>
    <label>Respect Subscription Setting</label>
    <type>Checkbox</type>
</CustomField>