force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__SenderIDSelectionCriteria__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SenderIDSelectionCriteria__c</fullName>
    <description>This field contains the value of the sender ID selction criteria. The value can be: Record Owner, Current User, etc.</description>
    <label>SenderID Selection Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Current User&apos;s SenderID</fullName>
            </value>
            <value>
                <fullName>Record Owner&apos;s SenderID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>