force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__SenderIDSelectionType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SenderIDSelectionType__c</fullName>
    <description>This field contains the value of the sender ID selection type. The value can be: Auto or Fixed.</description>
    <label>SenderID Selection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>