force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__SMS_Schedule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related schedule.</description>
    <label>SMS Schedule</label>
    <referenceTo>smagicinteract__SMS_Schedule__c</referenceTo>
    <relationshipLabel>Converse App Actions</relationshipLabel>
    <relationshipName>Converse_App_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>