force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related template.</description>
    <label>SMS Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Converse_App_Action</relationshipLabel>
    <relationshipName>Converse_App_Action</relationshipName>
    <type>Lookup</type>
</CustomField>