force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <description>This field contains the status of the Action. The status can be: Draft, Active, Paused, etc.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>