force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Task_Owner_Criteria__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Task_Owner_Criteria__c</fullName>
    <description>This field contains the criteria of the task owner. The criteria can be: Record Owner, Current User.</description>
    <label>Task Owner Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current User</fullName>
            </value>
            <value>
                <fullName>Record Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>