force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Template_Selection_Criteria__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Selection_Criteria__c</fullName>
    <description>This field contains the criteria of the template selection.</description>
    <label>Template Selection Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>