force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Template_Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Selection_Type__c</fullName>
    <description>This field contains the type of the template selction. The type can be: Auto or Fixed.</description>
    <label>Template Selection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>