force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Trigger_URL__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Trigger_URL__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Trigger URL</label>
    <type>Url</type>
</CustomField>