force-app/main/default/objects/smagicinteract__Converse_App_Action__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <description>This field contains the type of Action. The type can be: Automation, Auto Reply, Schedule, etc.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
                <default>true</default>
                <label>Automation</label>
            </value>
            <value>
                <fullName>Auto Reply</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Notification to User</fullName>
            </value>
            <value>
                <fullName>ResponseAutomation</fullName>
                <label>ResponseAutomation(Donot use)</label>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>