force-app/main/default/objects/smagicinteract__Converse_App_Action__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>